#4 Fix Portfolio bug on mobile

--- a/_sass/portfolio.scss
+++ b/_sass/portfolio.scss
@@ -3,9 +3,17 @@ section#portfolioSplash {
 }
 
 #gallery {
+    .card {
+        max-width: 280px;
+        max-height: 300px;
+        overflow: hidden;
+
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     img {
-        max-width: 270px;
-        max-height: 500px;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
